welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Int
    for (cpt <- 1 to nbPas)  {
             ^Program:10: error: type mismatch;
 found   : Unit
 required: Int
    recule(nbPas)
          ^