welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas : Int, versLAvant : Boolean) : Int = {
  var cpt = 0
  if (versLAvant == true) {
    for (cpt <- 1 to nbPas)  {
    	avance() 
    }
  }  
  else {
    recule(nbPas)
  }
	
}